# translator

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  bio.id.txt  bio.ja.txt  bio.japanese.txt  bio.txt  issues.md  main.py  pyproject.toml  pytest.ini  spec.md  translator_architecture.dot
.github/workflows/: uv-pytest-coverage.yml
prompts/: pr-body-prompt.txt  pr-title-prompt.txt
tests/: README.md  __init__.py  test_cache.py  test_config.py  test_cost.py  test_file_handler.py  test_frontmatter_handler.py  test_language.py  test_log_interpreter.py  test_streaming.py  test_token_counter.py  test_translator.py
translator/: __init__.py  cli.py  config.py  cost.py  file_handler.py  frontmatter_handler.py  language.py  log_interpreter.py  prompts-simple.py  prompts.py  providers.py  token_counter.py  translator.py
