[project]
name = "translator"
version = "0.3.0"
description = "CLI tool to translate text files using OpenAI's API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.78.1",
    "anthropic>=0.25.0",
    "python-dotenv>=1.1.0",
    "rich>=13.9.4",
    "tiktoken>=0.7.0",
    "pycountry>=23.12.10",
    "python-frontmatter>=1.1.0",
    "swarm",
    "pytest>=7.4.0",
    "pytest-cov>=6.1.1",
]

[project.scripts]
translator = "translator.cli:TranslatorCLI.run"

[tool.setuptools]
packages = ["translator"]

[tool.uv]
package = true

[tool.uv.sources]
swarm = { git = "https://github.com/openai/swarm.git" }
